--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Platform Ticket</title>
+  <title>Taemin Card</title>
   <link rel="stylesheet" href="scss/main.scss">
 </head>
 
 <body>
-  <h1>Parcel Starter</h1>
+  
 </body>
 
 </html>
