Finish front of card

--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,26 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Taemin Card</title>
+  <title>Taemin Animated Card</title>
   <link rel="stylesheet" href="scss/main.scss">
 </head>
 
 <body>
   
+  <div class="card">
+    <div class="card__content">
+
+      <div class="card__front">
+        <h2 class="card__title">Lee<br>Taemin</h2>
+        <p class="card__subtitle">K-POP Idol</p>
+      </div>
+
+      <div class="card__back">
+        <p class="card__body">Some text I'm not sure what I want it to say yet maybe some stats like height, day of debut, top hits?</p>
+      </div>
+    </div>
+  </div>
+
 </body>
 
 </html>
