Create back of card

--- a/src/index.html
+++ b/src/index.html
@@ -12,15 +12,63 @@
 <body>
   
   <div class="card">
-    <div class="card__content">
+    <div class="card__content" tabindex="0">
 
       <div class="card__front">
-        <h2 class="card__title">Lee<br>Taemin</h2>
+        <h2 class="card__title">Taemin</h2>
         <p class="card__subtitle">K-POP Idol</p>
       </div>
 
       <div class="card__back">
-        <p class="card__body">Some text I'm not sure what I want it to say yet maybe some stats like height, day of debut, top hits?</p>
+        <h2 class="card__back--name">Taemin</h2>
+        <div class="card__body">
+            
+          <div class="debut">
+            <p class="debut__title">solo debut</p>
+            <p class="debut__year">2014</p>
+          </div>
+
+          <hr>
+
+          <div class="stat-container">
+            <div class="stat">
+              <div class="stat__num">
+                4
+                <img class="stat__icon" src="images/record.png" alt="record icon">
+              </div>
+              <span class="stat__label">albums</span>
+            </div>
+            <div class="stat">
+              <div class="stat__num">
+                6
+                <img class="stat__icon" src="images/mic.png" alt="record icon">
+              </div>
+              <span class="stat__label">EPs</span>
+            </div>
+            <div class="stat">
+              <div class="stat__num">
+                17
+                <img class="stat__icon" src="images/mv.png" alt="record icon">
+              </div>
+              <span class="stat__label">music videos</span>
+            </div>
+          </div>
+
+          <hr>
+
+          <div class="hits">
+            <p class="hits__title">Top Hits</p>
+            <ul class="hits__list">
+              <li>MOVE</li>
+              <li>Criminal</li>
+              <li>WANT</li>
+              <li>Danger</li>
+              <li>Advice</li>
+              <li>IDEA</li>
+            </ul>
+          </div>
+
+        </div>
       </div>
     </div>
   </div>
