--- a/src/index.html
+++ b/src/index.html
@@ -34,21 +34,21 @@
             <div class="stat">
               <div class="stat__num">
                 4
-                <img class="stat__icon" src="images/record.png" alt="record icon">
+                <img class="stat__icon" src="images/record.png" alt="records icon">
               </div>
               <span class="stat__label">albums</span>
             </div>
             <div class="stat">
               <div class="stat__num">
                 6
-                <img class="stat__icon" src="images/mic.png" alt="record icon">
+                <img class="stat__icon" src="images/mic.png" alt="EPs icon">
               </div>
               <span class="stat__label">EPs</span>
             </div>
             <div class="stat">
               <div class="stat__num">
                 17
-                <img class="stat__icon" src="images/mv.png" alt="record icon">
+                <img class="stat__icon" src="images/mv.png" alt="music video icon">
               </div>
               <span class="stat__label">music videos</span>
             </div>
