--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Taemin Animated Card</title>
+  <link rel="shortcut icon" href="images/icons8-star-48.png" type="image/x-icon">
   <link rel="stylesheet" href="scss/main.scss">
 </head>
 
